--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                                 href="https://api.whatsapp.com/send?phone=5513996361287">
                                 Whatsapp
                             </a>   
+
+                            <a  class="link-border"
+                                href="mailto:lucca.f.bittencourt@gmail.com">
+                                Email
+                            </a>   
                     </section>    
     
                     <section>
